--- a/app/views/debts/_form.html.erb
+++ b/app/views/debts/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :amount %><br />
     <%= f.text_field :amount %>
   </div>
+  <div class="field">
+    <%= f.label :remarks %><br />
+    <%= f.text_area :remarks %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
